--- a/views/passwordreset.ejs
+++ b/views/passwordreset.ejs
@@ -1,3 +1,7 @@
+<nav>
+    <h2 class="mb-4">Bhbee Blog Site</h2>
+    <a href="/" class="btn btn-success">Home</a>
+  </nav>
 <div class="row mt-5">
     <div class="col-md-6 m-auto">
     <div class="card card-body">
