--- a/views/articles/new.ejs
+++ b/views/articles/new.ejs
@@ -1,7 +1,14 @@
 <div class="container">
     <h1 class="mb-4">New Article</h1>
 
-    <form action="/articles" method="POST">
+
+    <% 
+      function onCreateArticle(e){
+        console.log(e)
+      }
+    %>
+
+    <form onsubmit="onCreateArticle()" >
       <%- include('form_fields') %>
     </form>
 </div>
